--- a/personal-portfolio/src/stylesheets/Recommendation.css
+++ b/personal-portfolio/src/stylesheets/Recommendation.css
@@ -1,17 +1,20 @@
-.testimony-container {
+.recommendation-container {
     width: 1170px;
     height: 368px;
     margin: 10px 10px 50px;
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #fff;
-    box-shadow: 0 3px 13px 1px rgb(0 0 0 / 15%);
+    background-color: #a8d0db;
+    border-radius: 10px;
+    box-shadow: 0 3px 13px 1px rgb(0 0 0 / 25%);
   }
   
   .testimony-image {
-    height: 100%;
+    margin-left: 10px;
+    height: 60%;
     width: auto;
+    border-radius: 5px;
   }
   
   .text-testimony-container {
@@ -36,3 +39,5 @@
     font-size: 1.1rem;
     text-align: justify;
   }
+
+  
