--- a/personal-portfolio/src/stylesheets/Recommendation.css
+++ b/personal-portfolio/src/stylesheets/Recommendation.css
@@ -1,5 +1,5 @@
-.testimony-image {
-  margin-left: 10px;
+.recommendation-image {
+  margin-left: 5px;
   width: 100%;
   height: auto;
   /* width: auto; */
