Polish the UI for section Aboutme

--- a/personal-portfolio/src/stylesheets/About.css
+++ b/personal-portfolio/src/stylesheets/About.css
@@ -1,4 +1,7 @@
 .img-silvia {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   height: 200px;
   width: auto;
   border-radius: 10px;
