Working in styling section AboutMe

--- a/personal-portfolio/src/stylesheets/Contact.css
+++ b/personal-portfolio/src/stylesheets/Contact.css
@@ -1,4 +1,4 @@
-.create {
+/* .create {
     max-width: 400px;
     margin: 0 auto;
     text-align: center;
@@ -6,26 +6,27 @@
   .create label {
     text-align: left;
     display: block;
-  }
+  } */
   .create h1 {
     padding: 20px;
-    font-size: 20px;
+    font-size: 25px;
     color: #f1356d;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
   }
-  .create input, .create textarea, .create select {
+  /* .create input, .create textarea, .create select {
     width: 100%;
     padding: 6px 10px;
     margin: 10px 0;
     border: 1px solid #ddd;
     box-sizing: border-box;
     display: block;
-  }
+  } */
   .create button {
     background: #f1356d;
     color: #fff;
-    border: 0;
+    /* border: 0; */
     padding: 8px;
     border-radius: 8px;
     cursor: pointer;
+    display: inline-block;
   }
