--- a/personal-portfolio/src/stylesheets/Recommendation.css
+++ b/personal-portfolio/src/stylesheets/Recommendation.css
@@ -1,8 +1,8 @@
 .recommendation-image {
-  margin-left: 5px;
-  width: 200px;
+  /* margin-left: 5px; */
+  /* width: 200px; */
   height: 200px;
-  /* width: auto; */
+  width: auto;
   border-radius: 5px;
   
 }
@@ -11,9 +11,14 @@ nav {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.custom-text-justify {
-  text-align: justify;
-  text-justify: inter-word;
+.container-form {
+  background: linear-gradient(to right, #82bac4, #e1e9eb);
+}
+
+.img-container {
+  margin-top: 15px;
+  display: flex;
+  justify-content: center;
 }
 
 @media (min-width: 992px) { /* Aplica estos estilos solo en pantallas lg o más grandes */
