Fixing unorder list in the navbar to show at the right

--- a/personal-portfolio/src/stylesheets/NavBar.css
+++ b/personal-portfolio/src/stylesheets/NavBar.css
@@ -10,9 +10,6 @@
   font-style: normal;
 }
 
-header {
-  position: sticky;
-  top: 0px;
-  left: 0;
-  width: 100%;
+.navbar-nav {
+  margin-left: auto;
 }
