Chnaging color of navbar to dark and logo hover to a brighter color

--- a/personal-portfolio/src/stylesheets/NavBar.css
+++ b/personal-portfolio/src/stylesheets/NavBar.css
@@ -8,8 +8,12 @@
   font-family: "Tangerine", cursive;
   font-weight: 700;
   font-style: normal;
+
 }
 
 .navbar-nav {
   margin-left: auto;
+  text-align: center;
 }
+
+
