--- a/personal-portfolio/src/index.css
+++ b/personal-portfolio/src/index.css
@@ -1,6 +1,11 @@
 header {
-    position: sticky;
-    top: 0px;
-    left: 0;
-    width: 100%;
-  }
+  position: sticky;
+  top: 0px;
+  left: 0;
+  width: 100%;
+}
+
+/* html, body {
+  font-size: 18px;
+  background-color: #000000; 
+} */
