--- a/personal-portfolio/src/stylesheets/Recommendation.css
+++ b/personal-portfolio/src/stylesheets/Recommendation.css
@@ -1,5 +1,5 @@
 .recommendation-image {
-  margin-left: 5px;
+  margin-left: 15px;
   /* width: 200px; */
   height: 200px;
   width: auto;
@@ -12,17 +12,18 @@ nav {
 }
 
 .container-form {
-  background: linear-gradient(to right, #82bac4, #e1e9eb);
+  background:  #97E4FF;
 }
 
 .img-container {
-  margin-top: 15px;
+  margin-top: 10px;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .parrafo {
   font-size: 18px;
-  /* font-weight: bold; */
-  /* text-align: center; */
+  margin-left: 10px;
+  justify-content: center;
 }
