--- a/personal-portfolio/src/stylesheets/Recommendation.css
+++ b/personal-portfolio/src/stylesheets/Recommendation.css
@@ -12,7 +12,9 @@ nav {
 }
 
 .container-form {
-  background:  #97E4FF;
+  background:  #a7ddf1;
+  width: 60%;
+  margin: auto;
 }
 
 .img-container {
