--- a/src/stylesheets/About.css
+++ b/src/stylesheets/About.css
@@ -24,5 +24,7 @@
   width: 100%;
   max-width: 300px;
   height: 350px;
+  border-radius: 10px;
+  box-shadow: 0 3px 19px 1px rgb(0 0 0 / 25%);
 }
 
