--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,22 @@ html, body {
   font-size: 18px;
 }
 
-
-.profile-footer {
-  text-align: center;
-  /* position: fixed; */
-  inset: auto 0 0 0;
-  padding: 1em;
-  font-size: .4em;
+/* h1, h2, h3, h4, h5, h6 {
+  font-family: 'Cormorant Infant', serif;
 }
 
-.profile-footer a:hover i {
-  color: #c2e3f1; /* Change to the color you want */
+p {
+  font-family: 'Cormorant Infant', serif;
+} */
+
+.icon-with-shadow {
+  background-color: #333; /* Ajusta al color de fondo deseado */
+  border-radius: 50%;
+  padding: 10px; /* Ajusta según el tamaño del icono */
+  transition: color 0.3s ease, box-shadow 0.3s ease;
+}
+
+.icon-with-shadow:hover {
+  color: #0067d4; /* Cambia el color del icono en hover */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Aplica sombra circular */
 }
